# blatman

./: CMakeLists.txt  README.md  main.cpp
include/: ArgumentParser.hpp  BuildDetector.hpp  Builder.hpp  DependencyResolver.hpp  GitRepository.hpp  Installer.hpp  Logger.hpp
src/: ArgumentParser.cpp  BuildDetector.cpp  Builder.cpp  DependencyResolver.cpp  GitRepository.cpp  Installer.cpp  Logger.cpp
